crates/ts-pack-ffi/include/tslp.h


void tslp_free_string(char *ptr);
char *tslp_detect_language_from_extension(const char *ext);
char *tslp_detect_language_from_path(const char *path);
char *tslp_extension_ambiguity(const char *ext);
char *tslp_extension_ambiguity_json(const char *ext);
char *tslp_detect_language_from_content(const char *content);
TSLPValidationResult *tslp_validate_extraction(const TSLPExtractionConfig *config);
TSLPProcessResult *tslp_process(const char *source,
                                const TSLPProcessConfig *config,
                                const TSLPLanguageRegistry *registry);
TSLPNodeInfo *tslp_root_node_info(const TSLPTree *tree);
char *tslp_find_nodes_by_type(const TSLPTree *tree,
                              const char *node_type);
char *tslp_named_children_info(const TSLPTree *tree);
TSLPTree *tslp_parse_string(const char *language,
                            const uint8_t *source,
                            uintptr_t source_len);
int32_t tslp_tree_contains_node_type(const TSLPTree *tree,
                                     const char *node_type);
int32_t tslp_tree_has_error_nodes(const TSLPTree *tree);
char *tslp_tree_to_sexp(const TSLPTree *tree);
uintptr_t tslp_tree_error_count(const TSLPTree *tree);
char *tslp_get_highlights_query(const char *language);
char *tslp_get_injections_query(const char *language);
char *tslp_get_locals_query(const char *language);
char *tslp_split_code(const char *source,
                      const TSLPTree *tree,
                      uintptr_t max_chunk_size);
TSLPLanguage *tslp_get_language(const char *name);
TSLPParser *tslp_get_parser(const char *name);
char *tslp_available_languages(void);
int32_t tslp_has_language(const char *name);
uintptr_t tslp_language_count(void);
TSLPExtractionResult *tslp_extract_patterns(const char *source,
                                            const TSLPExtractionConfig *config);
int32_t tslp_init(const TSLPPackConfig *config);
int32_t tslp_configure(const TSLPPackConfig *config);
uintptr_t tslp_download_all(void);
char *tslp_manifest_languages(void);
char *tslp_downloaded_languages(void);
int32_t tslp_clean_cache(void);
char *tslp_cache_dir(void);