packages/java/src/main/java/dev/kreuzberg/tslp/NativeLib.java

// DO NOT EDIT - auto-generated by skif
package dev.kreuzberg.tslp;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;

final class NativeLib {
    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;

    static {
        System.loadLibrary("tslp");
        LIB = SymbolLookup.loaderLookup();
    }

    static final MethodHandle TSLP_DETECT_LANGUAGE_FROM_EXTENSION = LINKER.downcallHandle(
        LIB.find("tslp_detect_language_from_extension").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_DETECT_LANGUAGE_FROM_PATH = LINKER.downcallHandle(
        LIB.find("tslp_detect_language_from_path").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_EXTENSION_AMBIGUITY = LINKER.downcallHandle(
        LIB.find("tslp_extension_ambiguity").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_EXTENSION_AMBIGUITY_JSON = LINKER.downcallHandle(
        LIB.find("tslp_extension_ambiguity_json").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_DETECT_LANGUAGE_FROM_CONTENT = LINKER.downcallHandle(
        LIB.find("tslp_detect_language_from_content").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_VALIDATE_EXTRACTION = LINKER.downcallHandle(
        LIB.find("tslp_validate_extraction").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_PROCESS = LINKER.downcallHandle(
        LIB.find("tslp_process").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_ROOT_NODE_INFO = LINKER.downcallHandle(
        LIB.find("tslp_root_node_info").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_FIND_NODES_BY_TYPE = LINKER.downcallHandle(
        LIB.find("tslp_find_nodes_by_type").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_NAMED_CHILDREN_INFO = LINKER.downcallHandle(
        LIB.find("tslp_named_children_info").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_PARSE_STRING = LINKER.downcallHandle(
        LIB.find("tslp_parse_string").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_TREE_CONTAINS_NODE_TYPE = LINKER.downcallHandle(
        LIB.find("tslp_tree_contains_node_type").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_TREE_HAS_ERROR_NODES = LINKER.downcallHandle(
        LIB.find("tslp_tree_has_error_nodes").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_TREE_TO_SEXP = LINKER.downcallHandle(
        LIB.find("tslp_tree_to_sexp").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_TREE_ERROR_COUNT = LINKER.downcallHandle(
        LIB.find("tslp_tree_error_count").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_GET_HIGHLIGHTS_QUERY = LINKER.downcallHandle(
        LIB.find("tslp_get_highlights_query").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_GET_INJECTIONS_QUERY = LINKER.downcallHandle(
        LIB.find("tslp_get_injections_query").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_GET_LOCALS_QUERY = LINKER.downcallHandle(
        LIB.find("tslp_get_locals_query").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_SPLIT_CODE = LINKER.downcallHandle(
        LIB.find("tslp_split_code").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG)
    );
    static final MethodHandle TSLP_GET_LANGUAGE = LINKER.downcallHandle(
        LIB.find("tslp_get_language").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_GET_PARSER = LINKER.downcallHandle(
        LIB.find("tslp_get_parser").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_AVAILABLE_LANGUAGES = LINKER.downcallHandle(
        LIB.find("tslp_available_languages").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_HAS_LANGUAGE = LINKER.downcallHandle(
        LIB.find("tslp_has_language").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_LANGUAGE_COUNT = LINKER.downcallHandle(
        LIB.find("tslp_language_count").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.JAVA_LONG)
    );
    static final MethodHandle TSLP_EXTRACT_PATTERNS = LINKER.downcallHandle(
        LIB.find("tslp_extract_patterns").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_INIT = LINKER.downcallHandle(
        LIB.find("tslp_init").orElseThrow(),
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_CONFIGURE = LINKER.downcallHandle(
        LIB.find("tslp_configure").orElseThrow(),
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_DOWNLOAD_ALL = LINKER.downcallHandle(
        LIB.find("tslp_download_all").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.JAVA_LONG)
    );
    static final MethodHandle TSLP_MANIFEST_LANGUAGES = LINKER.downcallHandle(
        LIB.find("tslp_manifest_languages").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_DOWNLOADED_LANGUAGES = LINKER.downcallHandle(
        LIB.find("tslp_downloaded_languages").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS)
    );
    static final MethodHandle TSLP_CLEAN_CACHE = LINKER.downcallHandle(
        LIB.find("tslp_clean_cache").orElseThrow(),
        FunctionDescriptor.ofVoid()
    );
    static final MethodHandle TSLP_CACHE_DIR = LINKER.downcallHandle(
        LIB.find("tslp_cache_dir").orElseThrow(),
        FunctionDescriptor.of(ValueLayout.ADDRESS)
    );

    static final MethodHandle TSLP_FREE_STRING = LINKER.downcallHandle(
        LIB.find("tslp_free_string").orElseThrow(),
        FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
    );
}
